# QRATOR_TESTS

Task1/: CMakeLists.txt  TestSet.json  local_min.c  local_min.h  main.c  readme.txt
Task1/json/: json_file_proc.c  json_file_proc.h
Task2/: CMakeLists.txt  TestSet.json  main.c  n_swaps.c  n_swaps.h  readme.txt
Task2/json/: cJSON.h  json_file_proc.c  json_file_proc.h
Task3/: CMakeLists.txt  TestSet.json  main.cpp  readme.txt  start_params.cpp  start_params.hpp  test_helpers.c  test_helpers.cpp  test_helpers.h  test_helpers.hpp  tests_set.cpp  tests_set.hpp
Task3/json/: cJSON.c
Task3/thread_pool/: locked.hpp  manager.cpp  manager.hpp  sync.cpp  sync.hpp  task.hpp  thread_pool.cpp  thread_pool.hpp  thread_starter.cpp  thread_starter.hpp  tp_exception.hpp  tp_queue.cpp  tp_queue.hpp  workers.cpp  workers.hpp
cJSON/: CMakeLists.txt
cjson/: json_file_proc.c  json_file_proc.h
